Fix UI bugs: navbar, visibility, accessibility improvements

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -125,21 +125,9 @@ body {
   transition: all 0.2s ease;
 }
 
-.weird-icon {
-  line-height: 150px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 5px;
-  margin-bottom: 5px;
-}
-
 .navbar-link {
   margin-right: 5px;
   font-size: 3vh;
-}
-
-.material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 48;
 }
 
 .navbar-link:hover > .settings-icon {
